fix: to perdendo as esperanças